--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "lightweight vanilla js carousel",
   "main": "index.js",
   "scripts": {
-    "build": "babel ./src -d ./dist && node-minify --compressor uglify-js --input ./dist/russunit-slider.js --output ./dist/russunit-slider.min.js"
-    
+    "compile:js": "babel ./src -d ./dist",
+    "minify:js": "node-minify --compressor uglify-js --input ./dist/russunit-slider.js --output ./dist/russunit-slider.min.js",
+    "compile:css": "sass ./src/russunit-slider.scss ./dist/russunit-slider.css",
+    "build": "npm run compile:css & npm run compile:js && npm run minify:js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,7 @@
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@node-minify/cli": "^5.3.0",
-    "@node-minify/uglify-js": "^5.3.0"
+    "@node-minify/uglify-js": "^5.3.0",
+    "sass": "^1.26.3"
   }
 }
