--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@node-minify/cli": "^5.3.0",
-    "@node-minify/uglify-js": "^5.3.0",
-    "sass": "^1.26.3"
-  }
+    "@node-minify/uglify-js": "^5.3.0"
+  },
+  "dependencies": {}
 }
